增加资源文件

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,10 +72,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-#  fonts:
-#    - family: RubikBold
-#      fonts:
-#        - asset: assets/fonts/Rubik-Bold.ttf
+  fonts:
+    - family: AHV
+      fonts:
+        - asset: assets/fonts/AHV.ttf
   assets:
     - assets/images/
     - assets/translations/
