--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   logger: ^2.6.0
   applovin_max: any
   cupertino_icons: ^1.0.8
-
+  lottie: ^3.3.1
   #    firebase_core: ^4.0.0
 #    firebase_remote_config: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
@@ -79,6 +79,8 @@ flutter:
   assets:
     - assets/images/
     - assets/translations/
+    - assets/animations1/data.json
+    - assets/animations1/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
