--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   applovin_max: any
   cupertino_icons: ^1.0.8
   lottie: ^3.3.1
+  flame: ^1.30.1
   #    firebase_core: ^4.0.0
 #    firebase_remote_config: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
@@ -78,6 +79,7 @@ flutter:
         - asset: assets/fonts/AHV.ttf
   assets:
     - assets/images/
+#    - assets/images/fish/
     - assets/translations/
     - assets/animations1/data.json
     - assets/animations1/images/
