增加食物奖励弹窗

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   lottie: ^3.3.1
   flame: ^1.32.0
   auto_size_text: ^3.0.0
+  connectivity_plus: ^7.0.0
   #    firebase_core: ^4.0.0
 #    firebase_remote_config: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
