--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   auto_size_text: ^3.0.0
   connectivity_plus: ^7.0.0
   audioplayers: ^6.5.1
+  tutorial_coach_mark: ^1.3.1
+
   #    firebase_core: ^4.0.0
 #    firebase_remote_config: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
