--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,9 @@ dependencies:
   connectivity_plus: ^7.0.0
   audioplayers: ^6.5.1
   tutorial_coach_mark: ^1.3.1
-
-  #    firebase_core: ^4.0.0
+  firebase_core: ^4.0.0
+  firebase_crashlytics: ^5.0.0
+  firebase_analytics: ^12.0.0
 #    firebase_remote_config: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
