新用户引导流程

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
 #    - assets/images/fish/
     - assets/translations/
     - assets/animations1/arrow.json
+    - assets/animations1/coin.json
     - assets/animations1/images/
     - assets/audio/award.mp3
     - assets/audio/bg1.mp3
