--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   android_play_install_referrer: ^0.4.0
   flutter_tba_info: ^0.0.9
   applovin_max: ^4.5.0
+  flutter_easyloading: ^3.0.5
   flutter_local_notifications:
     path: fish_nf
   #  firebase_core: ^4.0.0
