--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,10 +67,10 @@ dependencies:
   flutter_easyloading: ^3.0.5
   flutter_local_notifications:
     path: fish_nf
-  #  firebase_core: ^4.0.0
-#  firebase_crashlytics: ^5.0.0
-#  firebase_analytics: ^12.0.0
-#    firebase_remote_config: ^6.0.0
+  firebase_core: ^4.0.0
+  firebase_crashlytics: ^5.0.0
+  firebase_analytics: ^12.0.0
+  firebase_remote_config: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
