--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   firebase_crashlytics: ^5.0.0
   firebase_analytics: ^12.0.0
   firebase_remote_config: ^6.0.0
+  flutter_custom_facebook: ^0.0.5
+  adjust_sdk: ^5.4.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
