接入h5、保护功能修改

--- a/pd/android/build.gradle
+++ b/pd/android/build.gradle
@@ -43,6 +43,12 @@ android {
         test.java.srcDirs += "src/test/kotlin"
     }
 
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     defaultConfig {
         minSdk = 24
     }
