--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,7 @@ dependencies:
   flutter_tba_info: ^0.0.9
   applovin_max: ^4.5.0
   flutter_easyloading: ^3.0.5
-  flutter_local_notifications:
-    path: fish_nf
+
   firebase_core: ^4.0.0
   firebase_crashlytics: ^5.0.0
   firebase_analytics: ^12.0.0
@@ -75,7 +74,10 @@ dependencies:
   adjust_sdk: ^5.4.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-
+  flutter_local_notifications:
+    path: fish_nf
+  pd:
+    path: pd
 dev_dependencies:
   flutter_test:
     sdk: flutter
