--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   firebase_remote_config: ^6.0.0
   flutter_custom_facebook: ^0.0.5
   adjust_sdk: ^5.4.4
+  permission_handler: ^12.0.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_local_notifications:
