--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   flutter_custom_facebook: ^0.0.5
   adjust_sdk: ^5.4.4
   permission_handler: ^12.0.1
+  url_launcher: ^6.3.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -81,6 +83,8 @@ dependencies:
     path: fish_nf
   pd:
     path: pd
+  gspace:
+    path: Gspace
 dev_dependencies:
   flutter_test:
     sdk: flutter
