--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   adjust_sdk: ^5.4.4
   permission_handler: ^12.0.1
   url_launcher: ^6.3.2
+  facebook_app_events: ^0.21.0
 
 
   # The following adds the Cupertino Icons font to your application.
